[project]
name = "hunter-sdk"
version = "0.1.0"
description = "Python SDK for the Hunter.io API"
requires-python = ">=3.11"
dependencies = [
    "requests>=2.31.0",
]

[dependency-groups]
dev = [
    "types-requests>=2.31.0.20240406",
    "wemake-python-styleguide>=0.19.0",
    "flake8>=7.0.0",
    "flake8-isort>=6.1.1",
    "flake8-docstrings>=1.7.0",
    "mypy>=1.9.0",
    "isort>=5.13.2",
    "pytest>=8.1.1",
    "pytest-cov>=5.0.0",
]

[tool.hatch.build.targets.wheel]
packages = ["hunter"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
